--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Alexandra Paulino - artist - homepage</title>
+<title>Alexandra Paulino - artist - about me</title>
 <link rel="stylesheet" href="css/foundation.css">
 <link rel="stylesheet" href="css/app.css">
 </head>
@@ -12,11 +12,11 @@
 <body>
  <div class="wrapper">
    <header class="row">
-     <h1 class="columns small-12 medium-6 large-4">Logo</h1>
-     <nav class="columns small-12 medium-6 large-4">
-       <a href="index.html" class="columns small-12 medium-2 large-1"> Home </a>
-       <a href="portfolio.htmtl" class="columns small-12 medium-2 large-1"> Portfolio </a>
-       <a href="about.html" class="columns small-12 medium-2 large-1"> About Me </a>
+     <h1>Logo</h1>
+     <nav>
+       <a href="index.html"> Home </a>
+       <a href="portfolio.htmtl"> Portfolio </a>
+       <a href="about.html"> About Me </a>
      </nav>
    </header>
 
