--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </style>
 </head>
 
-<body>
+<body class="large-12 medium-12 small-12 row">
  <div class="wrapper">
    <header class="row">
      <h1 class="columns small-12 medium-6 large-4">Discover</h1>
